[project]
name = "lightglue"
description = "LightGlue: Local Feature Matching at Light Speed"
version = "0.0"
authors = [
    {name = "Philipp Lindenberger"},
    {name = "Paul-Edouard Sarlin"},
]
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
urls = {Repository = "https://github.com/cvg/LightGlue/"}
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["black==23.12.1", "flake8", "isort"]

[tool.setuptools]
packages = ["lightglue"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"
